--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="info.wwwood.intentspractice">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".presentationlayer.controllers.activities.WebActivity" />
-        <activity android:name=".presentationlayer.controllers.activities.GPSActivity"></activity>
+        <activity android:name=".presentationlayer.controllers.activities.GPSActivity" />
+        <activity android:name=".presentationlayer.controllers.activities.DialerActivity"></activity>
     </application>
 
 </manifest>
