--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="info.wwwood.intentspractice">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +20,8 @@
         </activity>
         <activity android:name=".presentationlayer.controllers.activities.WebActivity" />
         <activity android:name=".presentationlayer.controllers.activities.GPSActivity" />
-        <activity android:name=".presentationlayer.controllers.activities.DialerActivity"></activity>
+        <activity android:name=".presentationlayer.controllers.activities.DialerActivity" />
+        <activity android:name=".presentationlayer.controllers.activities.ContactActivity"></activity>
     </application>
 
 </manifest>
